# example/api/api.swagger.json
@@ -15,14 +15,46 @@
     "application/json"
   ],
   "paths": {
-    "/v1/echo": {
-      "post": {
-        "operationId": "Echo",
+    "/user": {
+      "get": {
+        "operationId": "Page",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/apiEchoResp"
+              "$ref": "#/definitions/apiUserPageResp"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "UserService"
+        ]
+      }
+    },
+    "/user/login": {
+      "post": {
+        "operationId": "Login",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiLoginResp"
             }
           }
         },
@@ -32,52 +64,42 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/apiEchoReq"
+              "$ref": "#/definitions/apiLoginReq"
             }
           }
         ],
         "tags": [
-          "EchoService"
+          "UserService"
         ]
       }
     },
-    "/v1/ping": {
+    "/user/{id}": {
       "get": {
-        "operationId": "Ping",
+        "operationId": "Info",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/apiPingResp"
+              "$ref": "#/definitions/apiUserInfoResp"
             }
           }
         },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
         "tags": [
-          "EchoService"
+          "UserService"
         ]
       }
     }
   },
   "definitions": {
-    "apiEchoReq": {
-      "type": "object",
-      "properties": {
-        "value": {
-          "type": "string"
-        }
-      }
-    },
-    "apiEchoResp": {
-      "type": "object",
-      "properties": {
-        "error": {
-          "$ref": "#/definitions/apiError"
-        },
-        "value": {
-          "type": "string"
-        }
-      }
-    },
     "apiError": {
       "type": "object",
       "properties": {
@@ -94,11 +116,70 @@
         }
       }
     },
-    "apiPingResp": {
+    "apiLoginReq": {
       "type": "object",
       "properties": {
-        "value": {
+        "mobile": {
+          "type": "string",
+          "title": "手机号码"
+        },
+        "ticket": {
+          "type": "string",
+          "title": "短信验证码"
+        }
+      }
+    },
+    "apiLoginResp": {
+      "type": "object",
+      "properties": {
+        "error": {
+          "$ref": "#/definitions/apiError"
+        },
+        "token": {
           "type": "string"
+        }
+      }
+    },
+    "apiUser": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "name": {
+          "type": "string"
+        }
+      }
+    },
+    "apiUserInfoResp": {
+      "type": "object",
+      "properties": {
+        "user": {
+          "$ref": "#/definitions/apiUser"
+        }
+      }
+    },
+    "apiUserPageResp": {
+      "type": "object",
+      "properties": {
+        "users": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/apiUser"
+          }
+        },
+        "page": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "size": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "total": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     }
